--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
             { category: "经文背诵", question: "约书亚记 4:7\n这些石头要作{以色列人}永远的{纪念}。" },
 
             // 约书亚记 24:15
-            { category: "经文背诵", question: "约书亚记 24:15\n至于{我和我家}，我们必定事奉耶和华。" },
-            { category: "经文背诵", question: "约书亚记 24:15\n至于我和我家，我们必定{事奉}耶和华。" },
+            { category: "经文背诵", question: "约书亚记 24:15\n至于{我和我家}，我们必定侍奉耶和华。" },
+            { category: "经文背诵", question: "约书亚记 24:15\n至于我和我家，我们必定{侍奉}耶和华。" },
 
             // 路得记 1:16-17
-            { category: "经文背诵", question: "路得记 1:16\n不要{催逼}我回去不跟随你。" },
+            { category: "经文背诵", question: "路得记 1:16\n不要{催}我回去不跟随你。" },
             { category: "经文背诵", question: "路得记 1:16\n你的国就是{我的国}，你的神就是{我的神}。" },
             { category: "经文背诵", question: "路得记 1:17\n你在哪里{死}，我也在那里死，也{葬}在那里。" },
 
@@ -121,12 +121,7 @@
             { 
                 category: "亚伯拉罕", 
                 type: "list",
-                question: "亚伯拉罕主要事迹 (1-3)：\n1. 被神呼召，前往{迦南}（创 12-13）。\n2. 神与亚伯拉罕立约（创 {15}）。\n3. 与{夏甲}生以实玛利（创 16）。" 
-            },
-            { 
-                category: "亚伯拉罕", 
-                type: "list",
-                question: "亚伯拉罕主要事迹 (4-5)：\n4. 被神{更名}（创 17）。\n5. 为{索多玛}城代求（创 18-19）。" 
+                question: "亚伯拉罕主要事迹 (4-5)：\n4. 被神{更名}（创 17）。\n5. 为{所多玛}城代求（创 18-19）。" 
             },
             { 
                 category: "亚伯拉罕", 
